# educational-content

./: 3DConfidenceEllipsoid.py  glm_regressions.py  pyproject.toml
astropyhsics/: 2d_shock.py  hvcc.py
data_pipeline/: all_station_codes.json  aws_pipeline.py  weather_data.csv
lib/utils/: gen_gif.py
luhn/: luhn.py  luhn_anim.py
machine_learning/: Guassian_multivar.py  booststrap.py  boxcox.py  chebyshev_inequality.py  histogram_barplot.py  historgram_beaware.py  linear_reg.py  poisson.py
machine_learning/forecasting/: forecasting_indepth.py
machine_learning/simple_ml/: acf_pacf.py  gallery.py  pca_ols.py
quantum/: octa.py  particle_wave.py  particle_wave_x_move.py
real_analysis/: convolution.py  discrete_convolution.py  divergence_theorem.py
stochastic_process/: detail_balance.py
transformer/: main.py
transformer/media/Tex/: 02d057fce4950bb8.tex  03b607ab7491302f.tex  07787fb9d248838e.tex  3673a5cd47c925b6.tex  4b241246578f617a.tex  5a681a1d31cbbd51.tex  6879fdbeaf0ebf87.tex  6e5c379bb59ea161.tex  71a442a4d2db69c0.tex  9bc7e19ad43dd9e1.tex  9cc64d0f63f7f99f.tex  ae893386c9cc9cd6.tex  ba05759eec65d256.tex  c145c9a75c7f0570.tex  c2b21583e8ea0b57.tex  d29825fa82bb118a.tex  d2dbbbb712bec759.tex  d93ff8accb8883e4.tex  dbdb64a8e9fa50fd.tex  e83b88d077e7d14b.tex  e9cd4aa879e59162.tex  fceb4fc133135d24.tex
transformer/media/videos/main/720p30/partial_movie_files/FullTransformerAnimation/: partial_movie_file_list.txt
transformer/thinformer/: main.py
(+1 files in other folders)
